<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.koch.ambeth</groupId>
	<artifactId>base-pom</artifactId>
	<version>1.0.0</version>
	<packaging>pom</packaging>

	<properties>
		<Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
		<Bundle-Name>${project.artifactId}</Bundle-Name>
		<maven.build.timestamp.format>yyyyMMddHHmm</maven.build.timestamp.format>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<code-analysis-config.version>1.0.3</code-analysis-config.version>
		<org.osgi.core.version>6.0.0</org.osgi.core.version>
		<jax.ws.rs.version>2.0.1</jax.ws.rs.version>
		<tstamp>${maven.build.timestamp}</tstamp>
		<ambeth.version>3.0.1</ambeth.version>
		<junit-categories.version>1.0.0</junit-categories.version>
	</properties>

	<scm>
		<connection>scm:git:https://github.com/Dennis-Koch/ambeth.git</connection>
		<developerConnection>scm:git:https://github.com/Dennis-Koch/ambeth.git</developerConnection>
		<url>https://github.com/Dennis-Koch/ambeth.git</url>
	</scm>

	<developers>
		<developer>
			<id>denniskoch</id>
			<name>Dennis Koch</name>
			<email>dennis.koch@gmx.de</email>
			<organization>Bruker BioSpin GmbH</organization>
			<organizationUrl>https://www.bruker.com</organizationUrl>
			<roles>
				<role>architect</role>
				<role>developer</role>
			</roles>
			<timezone>Europe/Berlin</timezone>
		</developer>
	</developers>

	<distributionManagement>
		<repository>
			<id>ambeth-releases-bruker</id>
			<url>http://svetcos06.intra.brkr.corp:8081/ambeth-releases/</url>
		</repository>
		<snapshotRepository>
			<id>ambeth-snapshots-bruker</id>
			<url>http://svetcos06.intra.brkr.corp:8081/ambeth-snapshots/</url>
		</snapshotRepository>
	</distributionManagement>

	<modules>
		<module>ambeth-integrity</module>
		<module>jambeth</module>
		<module>doc/extendables-scanner</module>
		<module>doc/reference-manual</module>
		<module>junit-categories</module>
	</modules>

	<dependencyManagement>
		<dependencies>
			<!-- External dependencies -->
			<dependency>
				<groupId>org.ow2.asm</groupId>
				<artifactId>asm-all</artifactId>
				<version>5.2</version>
			</dependency>
			<dependency>
				<groupId>javax.ws.rs</groupId>
				<artifactId>javax.ws.rs-api</artifactId>
				<version>${jax.ws.rs.version}</version>
			</dependency>
			<dependency>
				<groupId>cglib</groupId>
				<artifactId>cglib</artifactId>
				<version>3.2.5</version>
				<exclusions>
					<exclusion>
						<groupId>org.ow2.asm</groupId>
						<artifactId>asm</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>it.sauronsoftware.cron4j</groupId>
				<artifactId>cron4j</artifactId>
				<version>2.2.5</version>
			</dependency>

			<dependency>
				<groupId>org.jdom</groupId>
				<artifactId>jdom2</artifactId>
				<version>2.0.6</version>
			</dependency>

			<dependency>
				<groupId>commons-io</groupId>
				<artifactId>commons-io</artifactId>
				<version>2.4</version>
			</dependency>

			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-lang3</artifactId>
				<version>3.4</version>
			</dependency>

			<dependency>
				<groupId>org.osgi</groupId>
				<artifactId>org.osgi.core</artifactId>
				<version>${org.osgi.core.version}</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>org.osgi</groupId>
				<artifactId>osgi.cmpn</artifactId>
				<version>${org.osgi.core.version}</version>
				<scope>provided</scope>
			</dependency>

			<dependency>
				<groupId>javax.servlet</groupId>
				<artifactId>javax.servlet-api</artifactId>
				<version>3.0.1</version>
				<scope>provided</scope>
			</dependency>

			<dependency>
				<groupId>org.eclipse.persistence</groupId>
				<artifactId>javax.persistence</artifactId>
				<version>2.1.1</version>
			</dependency>

			<dependency>
				<groupId>org.javassist</groupId>
				<artifactId>javassist</artifactId>
				<version>3.18.1-GA</version>
			</dependency>

			<dependency>
				<groupId>javax.transaction</groupId>
				<artifactId>jta</artifactId>
				<version>1.1</version>
			</dependency>

			<dependency>
				<groupId>xpp3</groupId>
				<artifactId>xpp3</artifactId>
				<version>1.1.4c</version>
			</dependency>

			<dependency>
				<groupId>net.objecthunter</groupId>
				<artifactId>exp4j</artifactId>
				<version>0.4.4</version>
			</dependency>

			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>1.7.21</version>
			</dependency>

			<!-- Base dependencies -->
			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>4.12</version>
				<scope>test</scope>
			</dependency>

			<dependency>
				<groupId>com.koch.ambeth</groupId>
				<artifactId>junit-categories</artifactId>
				<version>${junit-categories.version}</version>
				<scope>test</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-project-info-reports-plugin</artifactId>
					<version>2.9</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<configuration>
						<archive>
							<manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>
							<manifest>
								<addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
								<addClasspath>true</addClasspath>
							</manifest>
							<manifestEntries>
								<Implementation-Title>${project.groupId}:${project.artifactId}</Implementation-Title>
								<Implementation-Version>${project.version}</Implementation-Version>
								<Implementation-Vendor>Koch Softwaredevelopment</Implementation-Vendor>
							</manifestEntries>
						</archive>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>build-helper-maven-plugin</artifactId>
					<version>1.12</version>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<groupId>biz.aQute.bnd</groupId>
				<artifactId>bnd-maven-plugin</artifactId>
				<version>3.3.0</version>
				<executions>
					<execution>
						<goals>
							<goal>bnd-process</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.felix</groupId>
				<artifactId>maven-bundle-plugin</artifactId>
				<extensions>true</extensions>
				<version>2.4.0</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.1</version>
				<configuration>
					<source>1.7</source>
					<target>1.7</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>
				<version>2.5.1</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>2.2.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<phase>verify</phase>
						<goals>
							<goal>jar-no-fork</goal>
							<goal>test-jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<archive>
						<manifestEntries>
							<Bundle-ManifestVersion>2</Bundle-ManifestVersion>
							<Bundle-Name>${Bundle-Name}</Bundle-Name>
							<Bundle-SymbolicName>${Bundle-SymbolicName}.source</Bundle-SymbolicName>
							<Bundle-Version>${mf.version}</Bundle-Version>
							<Eclipse-SourceBundle>${Bundle-Name};version="${mf.version}";roots:="."</Eclipse-SourceBundle>
						</manifestEntries>
					</archive>
					<forceCreation>true</forceCreation>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.19.1</version>
				<!-- <configuration> <argLine>-XX:MaxPermSize=128m @{argLine}</argLine> 
					</configuration> -->
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-site-plugin</artifactId>
				<version>3.6</version>
				<executions>
					<execution>
						<id>attach-descriptor</id>
						<goals>
							<goal>attach-descriptor</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<reportPlugins>
						<plugin>
							<groupId>org.apache.maven.plugins</groupId>
							<artifactId>maven-project-info-reports-plugin</artifactId>
							<version>2.4</version>
							<reportSets>
								<reportSet>
									<reports>
										<report>dependencies</report>
										<report>project-team</report>
										<report>license</report>
										<report>issue-tracking</report>
									</reports>
								</reportSet>
							</reportSets>
						</plugin>
					</reportPlugins>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>build-helper-maven-plugin</artifactId>
				<executions>
					<execution>
						<id>regex-property</id>
						<goals>
							<goal>regex-property</goal>
						</goals>
						<configuration>
							<name>mf.version</name>
							<value>${project.version}</value>
							<regex>-SNAPSHOT</regex>
							<!-- <replacement>.SNAPSHOT</replacement> -->
							<replacement>.${maven.build.timestamp}</replacement>
							<failIfNoMatch>false</failIfNoMatch>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<reporting>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-project-info-reports-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>2.10.4</version>
				<configuration>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-checkstyle-plugin</artifactId>
				<version>2.17</version>
				<reportSets>
					<reportSet>
						<reports>
							<report>checkstyle</report>
						</reports>
					</reportSet>
				</reportSets>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>findbugs-maven-plugin</artifactId>
				<version>3.0.4</version>
				<configuration>
					<findbugsXmlOutput>true</findbugsXmlOutput>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-pmd-plugin</artifactId>
				<version>3.7</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jxr-plugin</artifactId>
				<version>2.5</version>
			</plugin>
		</plugins>
	</reporting>

	<profiles>
		<profile>
			<id>dev-local</id>
			<activation>
				<property>
					<name>!deploy.env</name>
				</property>
			</activation>
			<properties>
				<server.id>tomcat</server.id>
				<webserver.host>localhost</webserver.host>
				<webserver.port>9090</webserver.port>
				<deploy.env>test</deploy.env>
				<local.server.port>8089</local.server.port>
			</properties>
		</profile>

		<profile>
			<id>javadoc-jdk8</id>
			<activation>
				<jdk>[1.8,1.9)</jdk>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
						<version>2.10.4</version>
						<configuration>
							<additionalparam>-Xdoclint:none</additionalparam>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>

		<profile>
			<id>jenkins</id>
			<activation>
				<property>
					<name>env.JENKINS_HOME</name>
				</property>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-checkstyle-plugin</artifactId>
						<version>2.17</version>
						<configuration>
							<configLocation>${checkstyle.path}</configLocation>
							<exclude>**/*Test.class</exclude>
							<exclude>**/*-tests/src/**</exclude>

							<excludes>**/repackaged/**</excludes>
						</configuration>
						<executions>
							<execution>
								<phase>package</phase>
								<goals>
									<goal>checkstyle</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.codehaus.mojo</groupId>
						<artifactId>findbugs-maven-plugin</artifactId>
						<version>3.0.4</version>
						<executions>
							<execution>
								<phase>package</phase>
								<goals>
									<goal>findbugs</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.jacoco</groupId>
						<artifactId>jacoco-maven-plugin</artifactId>
						<version>0.7.9</version>
						<configuration>
							<excludes>
								<exclude>**/*$A*</exclude>
								<exclude>**/*FieldAccess*</exclude>
								<exclude>**/*MethodAccess*</exclude>

								<exclude>**/*Test.*</exclude>
								<exclude>**/*IT.*</exclude>
								<exclude>**/*-tests/src/**</exclude>

								<exclude>**/repackaged/**</exclude>
							</excludes>
						</configuration>
						<executions>
							<execution>
								<id>jacoco-initialize</id>
								<goals>
									<goal>prepare-agent</goal>
								</goals>
							</execution>
							<execution>
								<id>jacoco-site</id>
								<phase>package</phase>
								<goals>
									<goal>report</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
						<version>2.9.1</version>
						<configuration>
							<excludePackageNames>*.repackaged.*</excludePackageNames>
						</configuration>
						<executions>
							<execution>
								<id>attach-javadocs</id>
								<goals>
									<goal>jar</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-pmd-plugin</artifactId>
						<version>3.0.2-SNAPSHOT</version>
						<configuration>
							<excludes>
								<exclude>**/repackaged/**</exclude>
								<exclude>**/*-tests/src/**</exclude>
							</excludes>
							<excludeRoots>
								<excludeRoot>../*-tests</excludeRoot>
							</excludeRoots>
						</configuration>
						<executions>
							<execution>
								<phase>package</phase>
								<goals>
									<goal>pmd</goal>
									<goal>cpd</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-source-plugin</artifactId>
						<version>2.2.1</version>
						<executions>
							<execution>
								<id>attach-sources</id>
								<phase>verify</phase>
								<goals>
									<goal>jar-no-fork</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-surefire-plugin</artifactId>
						<configuration>
							<testFailureIgnore>true</testFailureIgnore>
							<forkCount>1C</forkCount>
							<reuseForks>true</reuseForks>
							<systemPropertyVariables>
								<ambeth.test.forkname>f${surefire.forkNumber}</ambeth.test.forkname>
							</systemPropertyVariables>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<!-- This profil enables TestNG to run unit tests for Testlink Jenkins 
				integration -->
			<id>Testlink</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-surefire-plugin</artifactId>
						<configuration>
							<properties>
								<property>
									<name>junit</name>
									<value>false</value>
								</property>
							</properties>
							<threadCount>1</threadCount>
							<testFailureIgnore>true</testFailureIgnore>
						</configuration>
						<dependencies>
							<dependency>
								<groupId>org.apache.maven.surefire</groupId>
								<artifactId>surefire-testng</artifactId>
								<version>2.19.1</version>
							</dependency>
						</dependencies>
					</plugin>
				</plugins>
			</build>

			<dependencies>
				<dependency>
					<groupId>org.testng</groupId>
					<artifactId>testng</artifactId>
					<version>6.7</version>
					<scope>test</scope>
				</dependency>
			</dependencies>
		</profile>
		<profile>
			<id>license</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.codehaus.mojo</groupId>
						<artifactId>license-maven-plugin</artifactId>
						<version>1.12</version>
						<configuration>
							<organizationName>Koch Softwaredevelopment</organizationName>
							<inceptionYear>2017</inceptionYear>
							<licenseName>apache_v2</licenseName>
							<ignoreNoFileToScan>true</ignoreNoFileToScan>
						</configuration>
						<executions>
							<execution>
								<id>first</id>
								<goals>
									<goal>update-file-header</goal>
									<goal>update-project-license</goal>
								</goals>
								<phase>process-sources</phase>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>